# proposal-craft-env

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_DOC.md  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
env/: environment.py  graders.py  models.py  tasks.py
server/: app.py
tests/: test_environment.py  test_graders.py  test_server.py
