[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proposal-craft-env"
version = "1.0.0"
description = "An OpenEnv environment for iterative proposal/document drafting"
requires-python = ">=3.11"
dependencies = [
	"openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"
